# motor-avaliador-farol

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  database.py  main.py
app/data/: indicadores.json
app/models/: __init__.py  avaliacao.py  base.py  indicador.py  usuario.py
app/routes/: admin.py  auth.py  avaliacoes.py  configuracoes.py  dashboard.py  health.py  revisao.py
app/services/: auth.py  avaliador.py  avaliador_batch.py  bootstrap.py  crawler.py  descobridor.py  ia_client.py  prompts.py  publicador.py  runner.py  tools.py  triagem.py  tz.py
app/templates/: admin_usuarios.html  avaliacao_detalhe.html  avaliacao_nova.html  base.html  configuracoes.html  dashboard.html  login.html  relatorio_publico.html  revisao.html  trocar_senha.html
app/workers/: celery_app.py
docs/: ARQUITETURA.md  CALIBRACAO-IA.md  COOLIFY-SETUP.md  DNS-SETUP.md  REQUISITOS-TRANSPARENCIA.md  SETUP-USUARIO-SSH.md
