[project]
name = "motor-avaliador-farol"
version = "0.1.0"
description = "Motor de avaliação automática ITGP — Farol Público"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",                # ORM (SQLAlchemy + Pydantic)
    "psycopg[binary]>=3.2.0",          # PostgreSQL driver
    "asyncpg>=0.30.0",                 # async PG (pra workers)
    "alembic>=1.13.0",                 # migrations
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.12",         # forms
    "jinja2>=3.1.0",                   # templates
    "itsdangerous>=2.2.0",              # sessões/cookies seguros
    "playwright==1.48.0",              # browser real
    "pypdf>=5.0.0",                    # extrai texto de PDFs sem render
    "httpx>=0.27.0",                   # HTTP client (Claude API, FTP via WebDAV se precisar)
    "anthropic>=0.39.0",               # SDK oficial Claude
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",                # logs estruturados
    "tenacity>=9.0.0",                  # retries
    "rich>=13.9.0",                    # CLI/logs bonitos
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",                     # linter + formatter
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
